phpmyadmin/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: phpmyadmin-ingress
  namespace: default
  labels:
    app: phpmyadmin
    
  annotations:
    kubernetes.io/ingress.class: "traefik"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/hsts-include-subdomains: "true"
    ingress.kubernetes.io/hsts-max-age: "315360000"
    ingress.kubernetes.io/hsts-preload: "true"
spec:
  rules:
    - host: smart.ithub.space
      http:
        paths:
          - path: /
            backend:
              serviceName: phpmyadmin-service
              servicePort: 80
  tls:
    - hosts:
      - smart.ithub.space
      secretName: phpmyadmin-prod-tls
